--- a/public/package.json
+++ b/public/package.json
@@ -18,6 +18,7 @@
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "styled-components": "^6.1.0",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
